frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial;
}

body {
  background: #f4f4f4;
  height: 100dvh;
}

.conversation-container {
  display: flex;
  flex-direction: column;
  top: 0;
  height: 100dvh;
  /* border: 2px solid black; */
}

.conversation-header {
  display: flex;
  background-color: rgba(1, 90, 223, 0.5);
  min-height: 50px;
  box-shadow: 0px 2px 2px grey;
  font-size: 200%;
  justify-content: space-between;
  align-items: center;
  padding: 0px 12px;
  z-index: 10;
}

.conversation-header-name {
  color: white;
  font-size: 20px;
}

.conversation-header-username {
  color: black;
  align-content: center;
  height: 40px;
  width: 150px;
  font-size: 20px;
}

.conversation-body {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  height: auto;
  width: 100%;
  padding: 0px 8px;
  padding-bottom: 16px;
  overflow-y: scroll;
  gap: 6px;
  position: relative;
}

.conversation-body::-webkit-scrollbar,
.input-form::-webkit-scrollbar {
  width: 4px;
}

.conversation-body::-webkit-scrollbar-thumb,
.input-form::-webkit-scrollbar-thumb {
  background: #bbb;
  border-radius: 10px;
}

.conversation-body::-webkit-scrollbar-track,
.input-form::-webkit-scrollbar-track {
  background: transparent;
}

.message {
  display: flex;
  width: 100%;
}

.message-me,
.message-other {
  border: 1px solid lightblue;
  border-radius: 8px;

  padding: 8px 12px;

  max-width: 60%;
  width: fit-content;

  word-wrap: break-word;
  background-color: white;
}

.message.me {
  justify-content: flex-end;
}

.message.other {
  justify-content: flex-start;
}

.conversation-messageBox-username {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: rgb(228, 152, 82);
  font-size: 80%;
}

.conversation-messageBox-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: start;
  color: black;
}

.conversation-input {
  display: flex;
  /* min-height: 60px; */
  justify-content: space-between;
  gap: 8px;
  background-color: transparent;
  font-size: large;
  padding: 8px;
  align-items: end;
}

.input-form {
  display: flex;
  padding: 8px;
  border-radius: 16px;
  flex: 1 1 auto;
  font-size: 16px;
  resize: none;
  box-sizing: border-box;
  height: 40px;
  border: 1px solid #bbb;
}

.input-sent-btn {
  border-radius: 40%;
  border: 1px solid #bbb;
  height: 40px;
  width: 50px;
  align-self: self-end;
  font-size: 16px;
  box-sizing: border-box;
  cursor: pointer;
}

.input-sent-btn:hover {
  background-color: rgba(187, 187, 187, 0.5);
}

.input-sent-btn:active {
  background-color: #bbb;
}

.scroll-down-btn {
  position: sticky;
  width: 50px;
  height: 50px;
  box-sizing: border-box;
  border: 1px solid lightgrey;
  box-shadow: 0px 2px 2px lightgray;
  border-radius: 50%;
  left: 50%;
  bottom: 0px;
  padding: 6px;
  transform: translate(-50%, 0);
  z-index: 100;
  font-size: 30px;
  font-weight: bold;
  font-family: var(--sans);
  align-content: center;
  cursor: pointer;
}

.scroll-down-btn:hover {
  background-color: rgba(211, 211, 211, 0.5);
}

.scroll-down-btn:active {
  background-color: lightgray;
}

@media (max-width: 768px) {
  .conversation-input {
    display: flex;
    justify-content: space-between;
    min-height: 100px;
    background-color: transparent;
    font-size: large;
  }
}

